🌒 Dark mode issues commence

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -312,7 +312,6 @@ img {
 
 .bg-emeraldgreen {
 	background: $emerald-green;
-	color: $white;
 }
 
 .bg-blushpink {
